NicPro/trunk/source/src/libfcc/cblk_yy.output
Terminals which are not used

   cblk_TOK_NAT
   SYM_BLOCK_DECLARATION
   SYM_LINK_DECLARATION
   SYM_PIN
   SYM_EXPORT_DECLARATION


Grammar

    0 $accept: composite_block $end

    1 composite_block: cblk_TOK_CBLOCK id ';' uuid comments uses links exports cblk_TOK_END '.'

    2 comments: /* empty */
    3         | cblk_TOK_COMMENTS comment_list

    4 comment_list: /* empty */
    5             | comment_list comment

    6 comment: id '=' string ';'

    7 string: cblk_TOK_STRING
    8       | string cblk_TOK_STRING

    9 id: cblk_TOK_ID

   10 uuid: /* empty */
   11     | uuid_const ';'

   12 uuid_const: cblk_TOK_UUID

   13 uses: cblk_TOK_USES block_list

   14 block_list: /* empty */
   15           | block_list block_declaration

   16 block_declaration: id_list ':' id ';'

   17 id_list: id
   18        | id_list ',' id

   19 links: cblk_TOK_LINKS link_list

   20 link_list: /* empty */
   21          | link_list link_declaration

   22 link_declaration: pin cblk_TOK_POINTER pin_list ';'

   23 pin: id '.' id

   24 pin_list: pin
   25         | pin_list ',' pin

   26 exports: cblk_TOK_EXPORTS export_list

   27 export_list: /* empty */
   28            | export_list export_declaration

   29 export_declaration: id '=' pin ';'


Terminals, with rules where they appear

$end (0) 0
',' (44) 18 25
'.' (46) 1 23
':' (58) 16
';' (59) 1 6 11 16 22 29
'=' (61) 6 29
error (256)
cblk_TOK_NAT (258)
cblk_TOK_ID (259) 9
cblk_TOK_CBLOCK (260) 1
cblk_TOK_USES (261) 13
cblk_TOK_LINKS (262) 19
cblk_TOK_EXPORTS (263) 26
cblk_TOK_POINTER (264) 22
cblk_TOK_END (265) 1
cblk_TOK_UUID (266) 12
cblk_TOK_STRING (267) 7 8
cblk_TOK_COMMENTS (268) 3
SYM_BLOCK_DECLARATION (269)
SYM_LINK_DECLARATION (270)
SYM_PIN (271)
SYM_EXPORT_DECLARATION (272)


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
composite_block (24)
    on left: 1, on right: 0
comments (25)
    on left: 2 3, on right: 1
comment_list (26)
    on left: 4 5, on right: 3 5
comment (27)
    on left: 6, on right: 5
string (28)
    on left: 7 8, on right: 6 8
id (29)
    on left: 9, on right: 1 6 16 17 18 23 29
uuid (30)
    on left: 10 11, on right: 1
uuid_const (31)
    on left: 12, on right: 11
uses (32)
    on left: 13, on right: 1
block_list (33)
    on left: 14 15, on right: 13 15
block_declaration (34)
    on left: 16, on right: 15
id_list (35)
    on left: 17 18, on right: 16 18
links (36)
    on left: 19, on right: 1
link_list (37)
    on left: 20 21, on right: 19 21
link_declaration (38)
    on left: 22, on right: 21
pin (39)
    on left: 23, on right: 22 24 25 29
pin_list (40)
    on left: 24 25, on right: 22 25
exports (41)
    on left: 26, on right: 1
export_list (42)
    on left: 27 28, on right: 26 28
export_declaration (43)
    on left: 29, on right: 28


state 0

    0 $accept: . composite_block $end

    cblk_TOK_CBLOCK  shift, and go to state 1

    composite_block  go to state 2


state 1

    1 composite_block: cblk_TOK_CBLOCK . id ';' uuid comments uses links exports cblk_TOK_END '.'

    cblk_TOK_ID  shift, and go to state 3

    id  go to state 4


state 2

    0 $accept: composite_block . $end

    $end  shift, and go to state 5


state 3

    9 id: cblk_TOK_ID .

    $default  reduce using rule 9 (id)


state 4

    1 composite_block: cblk_TOK_CBLOCK id . ';' uuid comments uses links exports cblk_TOK_END '.'

    ';'  shift, and go to state 6


state 5

    0 $accept: composite_block $end .

    $default  accept


state 6

    1 composite_block: cblk_TOK_CBLOCK id ';' . uuid comments uses links exports cblk_TOK_END '.'

    cblk_TOK_UUID  shift, and go to state 7

    $default  reduce using rule 10 (uuid)

    uuid        go to state 8
    uuid_const  go to state 9


state 7

   12 uuid_const: cblk_TOK_UUID .

    $default  reduce using rule 12 (uuid_const)


state 8

    1 composite_block: cblk_TOK_CBLOCK id ';' uuid . comments uses links exports cblk_TOK_END '.'

    cblk_TOK_COMMENTS  shift, and go to state 10

    $default  reduce using rule 2 (comments)

    comments  go to state 11


state 9

   11 uuid: uuid_const . ';'

    ';'  shift, and go to state 12


state 10

    3 comments: cblk_TOK_COMMENTS . comment_list

    $default  reduce using rule 4 (comment_list)

    comment_list  go to state 13


state 11

    1 composite_block: cblk_TOK_CBLOCK id ';' uuid comments . uses links exports cblk_TOK_END '.'

    cblk_TOK_USES  shift, and go to state 14

    uses  go to state 15


state 12

   11 uuid: uuid_const ';' .

    $default  reduce using rule 11 (uuid)


state 13

    3 comments: cblk_TOK_COMMENTS comment_list .
    5 comment_list: comment_list . comment

    cblk_TOK_ID  shift, and go to state 3

    $default  reduce using rule 3 (comments)

    comment  go to state 16
    id       go to state 17


state 14

   13 uses: cblk_TOK_USES . block_list

    $default  reduce using rule 14 (block_list)

    block_list  go to state 18


state 15

    1 composite_block: cblk_TOK_CBLOCK id ';' uuid comments uses . links exports cblk_TOK_END '.'

    cblk_TOK_LINKS  shift, and go to state 19

    links  go to state 20


state 16

    5 comment_list: comment_list comment .

    $default  reduce using rule 5 (comment_list)


state 17

    6 comment: id . '=' string ';'

    '='  shift, and go to state 21


state 18

   13 uses: cblk_TOK_USES block_list .
   15 block_list: block_list . block_declaration

    cblk_TOK_ID  shift, and go to state 3

    $default  reduce using rule 13 (uses)

    id                 go to state 22
    block_declaration  go to state 23
    id_list            go to state 24


state 19

   19 links: cblk_TOK_LINKS . link_list

    $default  reduce using rule 20 (link_list)

    link_list  go to state 25


state 20

    1 composite_block: cblk_TOK_CBLOCK id ';' uuid comments uses links . exports cblk_TOK_END '.'

    cblk_TOK_EXPORTS  shift, and go to state 26

    exports  go to state 27


state 21

    6 comment: id '=' . string ';'

    cblk_TOK_STRING  shift, and go to state 28

    string  go to state 29


state 22

   17 id_list: id .

    $default  reduce using rule 17 (id_list)


state 23

   15 block_list: block_list block_declaration .

    $default  reduce using rule 15 (block_list)


state 24

   16 block_declaration: id_list . ':' id ';'
   18 id_list: id_list . ',' id

    ':'  shift, and go to state 30
    ','  shift, and go to state 31


state 25

   19 links: cblk_TOK_LINKS link_list .
   21 link_list: link_list . link_declaration

    cblk_TOK_ID  shift, and go to state 3

    $default  reduce using rule 19 (links)

    id                go to state 32
    link_declaration  go to state 33
    pin               go to state 34


state 26

   26 exports: cblk_TOK_EXPORTS . export_list

    $default  reduce using rule 27 (export_list)

    export_list  go to state 35


state 27

    1 composite_block: cblk_TOK_CBLOCK id ';' uuid comments uses links exports . cblk_TOK_END '.'

    cblk_TOK_END  shift, and go to state 36


state 28

    7 string: cblk_TOK_STRING .

    $default  reduce using rule 7 (string)


state 29

    6 comment: id '=' string . ';'
    8 string: string . cblk_TOK_STRING

    cblk_TOK_STRING  shift, and go to state 37
    ';'              shift, and go to state 38


state 30

   16 block_declaration: id_list ':' . id ';'

    cblk_TOK_ID  shift, and go to state 3

    id  go to state 39


state 31

   18 id_list: id_list ',' . id

    cblk_TOK_ID  shift, and go to state 3

    id  go to state 40


state 32

   23 pin: id . '.' id

    '.'  shift, and go to state 41


state 33

   21 link_list: link_list link_declaration .

    $default  reduce using rule 21 (link_list)


state 34

   22 link_declaration: pin . cblk_TOK_POINTER pin_list ';'

    cblk_TOK_POINTER  shift, and go to state 42


state 35

   26 exports: cblk_TOK_EXPORTS export_list .
   28 export_list: export_list . export_declaration

    cblk_TOK_ID  shift, and go to state 3

    $default  reduce using rule 26 (exports)

    id                  go to state 43
    export_declaration  go to state 44


state 36

    1 composite_block: cblk_TOK_CBLOCK id ';' uuid comments uses links exports cblk_TOK_END . '.'

    '.'  shift, and go to state 45


state 37

    8 string: string cblk_TOK_STRING .

    $default  reduce using rule 8 (string)


state 38

    6 comment: id '=' string ';' .

    $default  reduce using rule 6 (comment)


state 39

   16 block_declaration: id_list ':' id . ';'

    ';'  shift, and go to state 46


state 40

   18 id_list: id_list ',' id .

    $default  reduce using rule 18 (id_list)


state 41

   23 pin: id '.' . id

    cblk_TOK_ID  shift, and go to state 3

    id  go to state 47


state 42

   22 link_declaration: pin cblk_TOK_POINTER . pin_list ';'

    cblk_TOK_ID  shift, and go to state 3

    id        go to state 32
    pin       go to state 48
    pin_list  go to state 49


state 43

   29 export_declaration: id . '=' pin ';'

    '='  shift, and go to state 50


state 44

   28 export_list: export_list export_declaration .

    $default  reduce using rule 28 (export_list)


state 45

    1 composite_block: cblk_TOK_CBLOCK id ';' uuid comments uses links exports cblk_TOK_END '.' .

    $default  reduce using rule 1 (composite_block)


state 46

   16 block_declaration: id_list ':' id ';' .

    $default  reduce using rule 16 (block_declaration)


state 47

   23 pin: id '.' id .

    $default  reduce using rule 23 (pin)


state 48

   24 pin_list: pin .

    $default  reduce using rule 24 (pin_list)


state 49

   22 link_declaration: pin cblk_TOK_POINTER pin_list . ';'
   25 pin_list: pin_list . ',' pin

    ';'  shift, and go to state 51
    ','  shift, and go to state 52


state 50

   29 export_declaration: id '=' . pin ';'

    cblk_TOK_ID  shift, and go to state 3

    id   go to state 32
    pin  go to state 53


state 51

   22 link_declaration: pin cblk_TOK_POINTER pin_list ';' .

    $default  reduce using rule 22 (link_declaration)


state 52

   25 pin_list: pin_list ',' . pin

    cblk_TOK_ID  shift, and go to state 3

    id   go to state 32
    pin  go to state 54


state 53

   29 export_declaration: id '=' pin . ';'

    ';'  shift, and go to state 55


state 54

   25 pin_list: pin_list ',' pin .

    $default  reduce using rule 25 (pin_list)


state 55

   29 export_declaration: id '=' pin ';' .

    $default  reduce using rule 29 (export_declaration)
